[tool.poetry]
name = "pytelegramasync"
version = "0.1.0"
description = "Uma forma simples de conexão com o Telegram de forma assíncrona em Python."
authors = ["Diaszano <lucasdiiassantos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
blue = "^0.9.1"
mkdocs = "^1.3.1"
prospector = "^1.7.7"
mypy = "^0.971"
pip-audit = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
